<resources>
    <string name="app_name">Shop.com</string>
    <string name="get_started">Get Started</string>
    <string name="have_an_account_already">Have an account already ? (Sign in)</string>
    <string name="user_name_or_email">User name or Email</string>
    <string name="sign_in">Sign In</string>
    <string name="or">OR</string>
    <string name="sign_in_with_google">Sign in With Google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_signing_up">Confirm Signing Up</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="category_name">Category Name</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="description">Description</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="in_stock">In Stock</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="VAT">All prices include VAT</string>
    <string name="details">Details</string>
    <string name="sold_by">Sold By :</string>
    <string name="value_added_tax">Value-Added-Tax</string>
    <string name="vat_text1">As per Egyptian Tax regulations, VAT is charged at 14% on orders sold and shipped by Shop.Com within the Egypt.</string>
    <string name="vat_text2">The advertised prices for products displayed at Shop.Com are inclusive of any VAT in accordance with the Egypt VAT law.</string>
    <string name="vat_text3">if your order contains items from FBS (Fulfilled by Shop.com) Seller or any other Marketplace Seller, it is the requirement of the Seller to charge any VAT if they are registered. Marketplace Sellers not exceeding the Egypt VAT registration threshold shall not issue a Tax invoice and charge VAT on their sales.</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget password ?</string>
    <string name="sign_up_as_admin">Sign up as Admin</string>
    <string name="mahmoud_mamdouh_abdullah">Mahmoud Mamdouh Abdullah</string>
    <string name="mahmoud_khalil1072_gmail_com">mahmoud.khalil1072@gmail.com</string>
    <string name="qty">Qty :</string>
    <string name="do_you_really_want_to_exit">Do you really want to exit?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="sub_total">Sub Total:</string>
    <string name="calculate_sub_total">Calculate Sub Total</string>
    <string name="confirm_the_order">Confirm Order</string>
    <string name="copyRight">Copyright © 2020 Shop.com. All right reserved</string>
    <string name="we_have_all_you_need">We have all you need</string>
    <string name="search">Search</string>
    <string name="order_id">Order ID</string>
    <string name="order_date">Order Date</string>
    <string name="show_your_delivery_location">Show your delivery location</string>
    <string name="grand_total">Grand Total</string>
    <string name="back_to_home">Back to My Orders</string>
    <string name="the_cart_is_empty">The Cart is Empty</string>
    <string name="the_favourite_list_is_empty">The Favourite list is empty</string>
    <string name="you_did_not_order_until_now">You didn\'t order until now</string>
    <string name="send_verification_code">Send</string>
    <string name="the_6_digit_code">The 6 digit code</string>
    <string name="verify_code">Verify</string>
    <string name="change_password">Change Password</string>
    <string name="search_by_voice">Search by Voice</string>
    <string name="verify_your_number">Verify Your Number</string>
    <string name="verify_message"><![CDATA[Please enter your Country &\n your Phone Number]]></string>
    <string name="otp_code">Co\nde</string>
    <string name="otp_verification">Verification</string>
    <string name="otp_description">Enter your 6 digit code that you received on\n </string>
    <string name="new_credentials">NEW \n CREDENTIALS</string>
    <string name="set_pass_msg">Your Identity has been verified! \n Set your new password</string>

</resources>