<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_100sdp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_16sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_you_really_want_to_exit"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/black"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"/>

        <Button
            android:id="@+id/ok"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="?attr/selectableItemBackground"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="@string/ok"
            android:textColor="@color/dark_green"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="?attr/selectableItemBackground"
            android:layout_toStartOf="@id/ok"
            android:layout_alignParentBottom="true"
            android:text="@string/cancel"
            android:textColor="@color/dark_green"
            android:layout_marginRight="@dimen/_10sdp"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>