<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/empty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/_16ssp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_alignParentTop="true"
        android:layout_above="@id/relative"/>

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/_10sdp"
        android:background="@color/blue_50">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/sub_total"
                android:layout_marginEnd="@dimen/_10sdp"/>

            <TextView
                android:id="@+id/sub_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text=""
                android:textSize="@dimen/_15ssp"/>
        </LinearLayout>

        <Button
            android:id="@+id/calculate_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_layout"
            android:background="@drawable/add_cart_ripple"
            android:text="@string/calculate_sub_total"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_5sdp"/>

        <Button
            android:id="@+id/confirm_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/calculate_total"
            android:background="@drawable/add_favourite_ripple"
            android:text="@string/confirm_the_order"
            android:textColor="@color/hover_color"
            android:layout_marginTop="@dimen/_5sdp"
            android:enabled="false"
            />


    </RelativeLayout>

</RelativeLayout>